Update of Readme

--- a/config.properties
+++ b/config.properties
@@ -1,7 +1,7 @@
-#entry.0 = ccnx:/mySecondNode
+#entry.0 = ccnx:/myEntryNode
 #entry.0.cost = 10
 #entry.0.aggregate = true
 
-#entry.1 = ccnx:/mySecondAccessNode
+#entry.1 = ccnx:/myEntryAccessNode
 #entry.1.cost = 20
 #entry.1.aggregate = false
